--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
         "use-global-hook": "^0.1.12"
     },
     "scripts": {
-        "start": "set PORT=8080 && react-scripts start",
+        "start": "cross-env PORT=8080 react-scripts start",
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject"
