--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     },
     "devDependencies": {
         "@types/react-router-dom": "^5.1.5",
+        "cross-env": "^7.0.2",
         "prettier": "^2.0.5"
     }
 }
